fix(web-components): removed unnecessary margin from active indicator on ic-navigation-item
active indicator had unnecessary margin that caused it to misalign with its content

--- a/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
+++ b/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
@@ -257,10 +257,14 @@ svg {
   left: 0;
   width: var(--ic-space-xs);
   height: 2.5rem;
-  margin-top: 0.25rem;
-  margin-right: 0.313rem;
   background-color: var(--ic-action-default);
   transition: left 0s;
+}
+
+:host(.navigation-item-top-nav-child-selected) .link::before,
+:host(.navigation-item-side-menu-selected) .link::before,
+:host(.navigation-item-side-menu-selected) .link:focus::before {
+  margin-top: 0.25rem;
 }
 
 :host(.navigation-item-top-nav-child-selected) .link:focus {
